--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/roboto-mono": "^5.2.6",
     "@tailwindcss/vite": "^4.1.12",
+    "dotenv": "^17.2.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.541.0",
     "motion": "^12.23.12",
